WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303443
Fix build on platforms without COMPLETE_WEB_TRANSPORT after
303801@main
https://bugs.webkit.org/show_bug.cgi?id=303443
Summary
Fix build on platforms without COMPLETE_WEB_TRANSPORT after 303801@main
Alex Christensen
Reported
2025-12-02 17:48:08 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-02 17:48:17 PST
<
rdar://problem/165731179
>
Alex Christensen
Comment 2
2025-12-02 17:49:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54743
EWS
Comment 3
2025-12-02 17:52:49 PST
Committed
303802@main
(4a13172589cd): <
https://commits.webkit.org/303802@main
> Reviewed commits have been landed. Closing PR #54743 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug