Fix build on platforms without COMPLETE_WEB_TRANSPORT after 303801@main https://bugs.webkit.org/show_bug.cgi?id=303443 rdar://165731179

Unreviewed.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/303802@main